src/tests/typing/fail/diff_bus_size.tj
module main() = (b)
    shared b = ()
    n: 
        b = [1; 5]
    until